# goto-elimination

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
ast/: ast.h  expression.cc  expression.h  expression_factory.cc  iterator.cc  iterator.h  parse_tree.h  parse_tree_factory.cc  statement.cc  statement.h  statement_factory.cc  statement_factory.h
docker/: Dockerfile
goto_elimination/: goto_elimination.cc  goto_elimination.h
includes/: expression.hpp  goto_elimination.h  header.hpp  program.hpp  statement.h  statement.hpp
inputs/: complicated.txt  count_to_10.txt  elim_while.txt  indirectly_related.txt  lift.txt  normal.txt  out.txt  single_if.txt  working_complicated.txt
lib/: CMakeLists.txt
lib/ast/: expression.h  expression_factory.cc  iterator.cc  iterator.h  parse_tree.h  parse_tree_factory.cc  statement.cc  statement.h  statement_factory.cc  statement_factory.h
lib/goto_elimination/: definitions.cc  goto_elimination.cc  goto_elimination.h  goto_elimination.ipp  helpers.cc  transformations.cc
lib/src/: printing.cc
src/: expression.cpp  expression_factory.cpp  helpers.cpp  main.cc  main.cpp  printing.cc  printing.cpp  program.cpp  statement.cpp  statement_factory.cpp
tests/: CMakeLists.txt  tests.cc  tests.h
